--- a/src/pages/services/pack-medias.astro
+++ b/src/pages/services/pack-medias.astro
@@ -3,6 +3,5 @@ import Main from "@/layouts/main.astro";
 ---
 
 <Main title="Hello, Astro!">
-  <h1>Hello, Astro!</h1>
-  <a href="/contact">Test</a>
+  <h1>Pack Médias</h1>
 </Main>
