--- a/src/pages/services/identite-visuelle.astro
+++ b/src/pages/services/identite-visuelle.astro
@@ -3,6 +3,5 @@ import Main from "@/layouts/main.astro";
 ---
 
 <Main title="Hello, Astro!">
-  <h1>Hello, Astro!</h1>
-  <a href="/contact">Test</a>
+  <h1>Idéntité visuelle</h1>
 </Main>
