feat: features carrousel

--- a/src/layouts/main.astro
+++ b/src/layouts/main.astro
@@ -40,7 +40,7 @@ const { title } = Astro.props;
     <slot />
     <Footer />
     <style is:global>
-      .tk-larken {
+      .larken {
         font-family: "larken", sans-serif;
       }
 
