--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -39,7 +39,7 @@ const services = [
   <Navbar pathname={pathname} client:load />
 </div>
 
-<div class="hidden md:block sticky top-0 z-50 bg-background">
+<div class="hidden md:block top-0 z-50 bg-background">
   <a
     href="/contact"
     class="flex justify-center items-center p-4 gap-2 bg-secondary text-foreground hover:underline rounded-b-lg cursor-pointer font-medium"
