--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -13,8 +13,8 @@ import SubFooter from './SubFooter.astro';
       >
       <div class="absolute bottom-0 translate-y-3/4 rounded-full bg-orange text-white">
         <a
-          href="https://www.instagram.com/jolilot.atelier/"
-          aria-label="Ma page instagram @jolilot.atelier"
+          href="https://www.instagram.com/jolilotatelier/"
+          aria-label="Ma page instagram @jolilotatelier"
           target="_blank"
           referrerpolicy="no-referrer"
         >
