--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -11,8 +11,8 @@ import LogoIcon from '../components/Icons/LogoIcon.astro';
     <div class="flex gap-10 max-md:hidden text-sm">
       <a href="/contact" class="hover:text-orange">CONTACT</a>
       <a
-        href="https://www.instagram.com/jolilot.atelier/"
-        aria-label="Ma page instagram @jolilot.atelier"
+        href="https://www.instagram.com/jolilotatelier/"
+        aria-label="Ma page instagram @jolilotatelier"
         target="_blank"
         referrerpolicy="no-referrer"
         class="text-orange ml-9 hover:text-marron_fonce font-normal">PROJETS</a
@@ -40,8 +40,8 @@ import LogoIcon from '../components/Icons/LogoIcon.astro';
       <div class="flex flex-col items-center justify-center h-full gap-6">
         <a href="/contact" class="hover:text-orange">CONTACT</a>
         <a
-          href="https://www.instagram.com/jolilot.atelier/"
-          aria-label="Ma page instagram @jolilot.atelier"
+          href="https://www.instagram.com/jolilotatelier/"
+          aria-label="Ma page instagram @jolilotatelier"
           target="_blank"
           referrerpolicy="no-referrer"
           class="text-orange pt-8 hover:text-marron_fonce">PROJETS</a
