--- a/src/layouts/SubFooter.astro
+++ b/src/layouts/SubFooter.astro
@@ -14,11 +14,11 @@ const PostsInstagram = [
   },
   {
     image: Insta2,
-    url: 'https://www.instagram.com/jolilot.atelier/',
+    url: 'https://www.instagram.com/jolilotatelier/',
   },
   {
     image: Insta3,
-    url: 'https://www.instagram.com/jolilot.atelier/',
+    url: 'https://www.instagram.com/jolilotatelier/',
   },
 ];
 ---
@@ -31,7 +31,7 @@ const PostsInstagram = [
           <p>suivre toute</p>
           <p>l'actualité jolilot</p>
         </div>
-        <p>@jolilot.atelier</p>
+        <p>@jolilotatelier</p>
       </div>
       <div
         class="xl:col-span-2 max-w-xs sm:max-w-2xl place-self-center xl:place-self-end flex flex-col items-center glide glidef gap-y-8"
